fix: footer not align to center

--- a/src/components/result-page/result-page.less
+++ b/src/components/result-page/result-page.less
@@ -118,6 +118,7 @@
     justify-content: center;
     background-color: var(--adm-color-box);
     z-index: 3;
+    box-sizing: border-box;
 
     &-btn {
       flex: 1;
